--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-multi-slider",
+  "name": "react-native-range-bar",
   "version": "1.0.0",
-  "description": "react native multi select slider bar",
+  "description": "react native multi select slider bar for range",
   "main": "index.tsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
